--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,13 @@
 
     <string name="pref_sort_title">Sort by</string>
     <string name="pref_sort_key">sort</string>
-    <string name="pref_sort_default">Most Popular</string>
+    <string name="pref_sort_default">mpop</string>
     <string name="pref_sort_label_mpop">Most Popular</string>
     <string name="pref_sort_label_hrate">Highest-Rated</string>
     <string name="pref_sort_mpop">mpop</string>
     <string name="pref_sort_hrate">hrate</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
 
 
 </resources>
