--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="fav_button">MARK AS FAVOURITE</string>
+    <string name="trailer_title">Trailers</string>
+    <string name="movie_review_title">Reviews</string>
 
 
 </resources>
