--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,10 @@
     <string name="pref_sort_default">mpop</string>
     <string name="pref_sort_label_mpop">Most Popular</string>
     <string name="pref_sort_label_hrate">Highest-Rated</string>
+    <string name="pref_sort_label_fav">Favourites</string>
     <string name="pref_sort_mpop">mpop</string>
     <string name="pref_sort_hrate">hrate</string>
+    <string name="pref_sort_fav">fav</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="fav_button">MARK AS FAVOURITE</string>
